changes' is much more useful than 'misc edits' or 'code cleanup'.
3) Please include your name with the changes you make.
4) Whenever making an update, please update this file, no matter how
small - this just lets others know that the file has changed if nothing
else.  With this, include the file(s) that you changed.
------------------------------------------------------------------------------
Changes for SVN:

Makefile.am, Makefile.in (and Makefiles in subdirs): Put types in list of
   SUBDIRS before server so that compilation happens in correct order -
   server area requires types to be up to date.
MSW 2007-02-07

Make players change place with pets from party members instead of pushing
them away.
---
server/player.c: In move_player_attack() check for pets from party members
   in addition to own pets.
server/move.c: In push_ob() check for pets from party members in addition
   to own pets.
Andreas Kirschbaum 2007-02-07


Implement feature request #1652066: Python: get user's savebed location and x,y coords.
---
New properties for player:
 server/plugins.c
 include/plugin.h
---
Python properties:
 plugins/cfpython/include/cfpython_object_private.h
 plugins/cfpython/cfpython_object.c
Ryo 2007-02-06

utils/mapper.c: new command-line option "-addmap=<map>", to add a map to process.
 Now also take into account player_changer a an exit. Flag "rowmaps" to generate
 maps with random tiles instead of items.
Ryo 2007-02-04

plugins/cfpython/cfpython_object.c: Fix missing braces.
Alex Schultz 2007-02-03

plugins/cflogger/cflogger.c: Add missing return value in store_time().
plugins/cflogger/cflogger.c: Add missing call to va_end().
Andreas Kirschbaum 2007-01-29

utils/bwp.c: fix sort (sort by object's name). Fix memory leaks.
Ryo 2007-01-28

Implement feature request #822087: Apply below.
'apply' now has a new flag, '-b', that specified an item on the ground.
 lib/help/apply: updated.
 server/c_object.c: look for item on ground/in container.
Ryo 2007-01-21
